@@ -2,6 +2,9 @@ Nutch Change Log
 
 Unreleased changes (1.0-dev)
 
+ 1. NUTCH-474 - Fetcher2 crawlDelay and blocking fix (Dogacan Guney via ab)
+
+
 
 Release 0.9 - 2007-04-02
 
